[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concrete-strength-predictor"
version = "1.0.0"
description = "Concrete Compressive Strength Prediction Application"
dependencies = [
    "Flask==2.0.1",
    "joblib==1.0.1",
    "gunicorn==20.1.0",
    "numpy==1.19.5",
    "pandas==1.3.3",
    "requests==2.26.0",
    "scikit-learn==0.24.2",
    "statsmodels==0.12.2",
    "xgboost==1.4.2"
]

[tool.setuptools]
py-modules = []
