[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concrete-strength-predictor"
version = "1.0.0"
description = "Concrete Compressive Strength Prediction Application"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-multipart>=0.0.5",
    "jinja2>=3.0.0",
    "joblib==1.0.1",
    "gunicorn==20.1.0",
    "numpy>=1.19.5,<1.20.0",
    "pandas>=1.3.3,<1.4.0",
    "scikit-learn>=0.24.2,<0.25.0",
    "xgboost==2.0.3",
    "statsmodels>=0.12.2,<0.13.0",
    "requests>=2.26.0"
]

[tool.setuptools]
py-modules = []
